k8s/ui-external/ui-ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "false"
  creationTimestamp: null
  finalizers:
  - networking.gke.io/ingress-finalizer
  generation: 1
  name: ui-ingress
  namespace: medialab
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: ui-nodeport
          servicePort: 3000
        path: /*
  tls:
  - secretName: my-tls-secret
status:
  loadBalancer:
    ingress:
    - ip: 34.96.111.37
